--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ body {
 }
 
 #chicken-content{
+	padding: 10px;
+	text-align: justify;
 	min-height: 1000px;
 	margin-bottom: 20px;
 	border: 1px solid black;
